Made the Board viewable

--- a/src/fxmls/MainWindowFXML.fxml
+++ b/src/fxmls/MainWindowFXML.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainWindowController">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainWindowController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#testRun" text="Test" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -29,7 +29,7 @@
       </MenuBar>
    </top>
    <center>
-      <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <StackPane BorderPane.alignment="CENTER">
          <children>
             <Canvas fx:id="boardLayer" height="200.0" width="200.0" />
          </children>
