--- a/src/fxmls/MainWindowFXML.fxml
+++ b/src/fxmls/MainWindowFXML.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainWindowController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -29,9 +29,9 @@
       </MenuBar>
    </top>
    <center>
-      <StackPane BorderPane.alignment="CENTER">
+      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Canvas fx:id="boardLayer" height="200.0" width="200.0" />
+            <Canvas fx:id="boardLayer" height="200.0" onMouseClicked="#handleMouseClick" width="200.0" />
          </children>
       </StackPane>
    </center>
