Documented Controllers, FXMLs and Views

--- a/src/Fxmls/MainWindowFXML.fxml
+++ b/src/Fxmls/MainWindowFXML.fxml
@@ -9,19 +9,9 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="Game">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#testRun" text="Test" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#startHotSeatGame" text="New Hotseat Game" />
             </items>
           </Menu>
         </menus>
